# OSSpecs

./: .gitignore  .rar  Cargo.toml  LICENSE  LISEZMOI.md  README.md  Win32Field2RustField.cpp
OSSpecs/: Cargo.toml
OSSpecs/src/: CpuInfos.rs  LinuxCpuInfos.rs  OSDetection.rs  WindowsCpuInfos.rs  lib.rs
OSSpecs_tests/: Cargo.toml
OSSpecs_tests/src/: main.rs
