[package]
name = "OSSpecs"
version = "0.1.0"
edition = "2021"
authors = ["LeFanDOst"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "OSSpecs"
path = "src/lib.rs"

[dependencies]

[dependencies.windows]
version = "0.34.0"
features = [
    "alloc",
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]
